# magic_auth_client

./: .gitignore  README.md  pyproject.toml
src/magic_auth_client/: __init__.py  client.py  config.py  constants.py  exceptions.py  models.py
tests/: conftest.py  test_client.py  test_config.py  test_delegation.py  test_exceptions.py  test_google_oauth.py  test_models.py  test_version.py
