[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magic-auth-client"
version = "0.1.0"
description = "Async client for the magic auth provider (api.auth)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andres" }]
keywords = ["auth", "authentication", "client", "httpx", "async"]
dependencies = [
    "httpx>=0.28,<0.29",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/magic_auth_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
